update(custom.css)- truncation issue
Hopefully fixed the issue of longer phrases being truncated in undertitle

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -166,7 +166,7 @@ a {
 }
 
 .me .undertitle {
-    max-width: 550px;
+    max-width: 1000px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap
